--- a/config.env
+++ b/config.env
@@ -3,5 +3,11 @@ PGUSER=postgres
 PGPASSWORD=123456789
 PGHOST=localhost
 PGPORT=5432
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
 ACCESS_TOKEN = mysecretkey
+
+
+
+
