--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@types/connect-redis": "^0.0.20",
+    "@types/ioredis": "^5.0.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
+    "redis": "^4.6.7",
     "sequelize": "^6.32.0",
     "sequelize-typescript": "^2.1.5"
   }
